force-app/main/default/objects/Fee_Allocation__c/Fee_Allocation__c.object-meta.xml
<CustomObject>
    <label>Fee Allocation</label>
    <nameField>
        <displayFormat>FA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees Allocation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>