force-app/main/default/objects/Fee_Allocation__c/fields/Allocated_Days__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Days__c</fullName>
    <label>Allocated Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>