force-app/main/default/objects/Fee_Allocation__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Fees Allocation</relationshipLabel>
    <relationshipName>Fees_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>