force-app/main/default/objects/Fee_Allocation__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Fees Allocation</relationshipLabel>
    <relationshipName>Fees_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>