force-app/main/default/objects/Fee_Allocation__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrollment</label>
    <referenceTo>Enrollment__c</referenceTo>
    <relationshipLabel>Fees Allocation</relationshipLabel>
    <relationshipName>Fees_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>