force-app/main/default/objects/Fee_Allocation__c/fields/Enrollment_Status__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Status__c</fullName>
    <formula>TEXT (Enrollment__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Status</label>
    <type>Text</type>
</CustomField>