force-app/main/default/objects/Fee_Allocation__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice/Credit Note</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Fees Allocation</relationshipLabel>
    <relationshipName>Fees_Allocation</relationshipName>
    <type>Lookup</type>
</CustomField>