force-app/main/default/objects/Fee_Allocation__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <formula>Enrollment__r.Student__r.FirstName &amp;&apos; &apos;&amp;  Enrollment__r.Student__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>